--- a/src/main/resources/templates/form-question.html
+++ b/src/main/resources/templates/form-question.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet"  href="/css/main.css"/>
 </head>
 <body>
-<h1>Добавление вопроса к анкете:
-    <span th:text = "${question.questionnaireName}"> </span>
-</h1>
+<h1>Анкета:  <span th:text = "${question.questionnaireName}"> </span> </h1>
+<h2 th:text = "${question.id == null} ? 'Добавление нового вопроса' : 'Редактирование вопроса' "> </h2>
 
-<form method="post" action="/save-question" th:object="${question}">
+<form method="post" action="/save-or-update-question" th:object="${question}">
     <label for="name">Введите название вопроса</label>
     <input type="text" th:field="*{name}" id="name">
     <label for="count">Введите количество ответов для вопроса</label>
