git start add validation

--- a/src/main/resources/templates/add-new-answers.html
+++ b/src/main/resources/templates/add-new-answers.html
@@ -26,6 +26,8 @@
         </tr>
         </tbody>
     </table>
+    <input type="hidden" th:field="*{questionnaireId}" />
+    <input type="hidden" th:field="*{id}" />
     <button>Сохранить</button>
 </form>
 
