--- a/src/main/resources/templates/new-questionnaire.html
+++ b/src/main/resources/templates/new-questionnaire.html
@@ -10,8 +10,10 @@
 <h1>Создание новой анкеты</h1>
 
 <form method="post" action="/save-questionnaire" th:object="${questionnaire}">
-    <label for = "name">Введите название анкеты</label>
-    <input type="text" th:field="*{name}" th:errorclass="invalid-input" id = "name">
+    <label for = "name">Введите имя анкеты</label>
+    <input type="text" th:field = "*{name}" id = "name">
+    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" th:errorclass="invalid-input"></span>
+    <br>
     <button>Создать</button>
 </form>
 
