--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,43 +3,47 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Delivery food</title>
+    <title>Мини анкетная ситема</title>
     <link rel="stylesheet"  href="/css/main.css"/>
 </head>
 <body>
-<a th:href="@{'/all-results/'}">Результы анкетерования</a>
+<div th:insert="~{fragments/header :: header}" ></div>
+
+<div sec:authorize="hasAuthority('developers:write')">
+<a th:href="@{'/all-results/'}">Результы анкетерования пользователей</a>
+</div>
 
 <h1>Все анкеты</h1>
-
-<form method="get" action="/new-questionnaire">
-    <button>Создать анкету</button>
-</form>
 
 <table class="content-table", sortable="true">
     <thead>
     <tr>
-        <th>№</th>
         <th>Название анкеты</th>
         <th>Просмотр</th>
         <th>Заполнить</th>
+        <div sec:authorize="hasAuthority('developers:write')">
         <th>Редактировать</th>
         <th>Удалить</th>
+        </div>
     </tr>
     </thead>
     <tbody>
     <tr th:each="questionnaire : ${questionnaires}">
-
-        <td th:text = "${questionnaire.id}"></td>
         <td th:text = "${questionnaire.name}"></td>
         <td><a th:href="@{'/questionnaire/' + ${questionnaire.id}}">Просмотр</a></td>
         <td><a th:href="@{'/fill-questionnaire/' + ${questionnaire.id}}">Заполнить</a></td>
+        <div sec:authorize="hasAuthority('developers:write')">
         <td><a th:href="@{'/edit-questionnaire/' + ${questionnaire.id}}">Редактировать</a></td>
         <td><a th:href="@{'/delete-questionnaire/' + ${questionnaire.id}}">Удалить</a></td>
+        </div>
     </tr>
     </tbody>
 </table>
-
-
+<div sec:authorize="hasAuthority('developers:write')">
+<form method="get" action="/new-questionnaire">
+    <button>Создать анкету</button>
+</form>
+</div>
 </body>
 </html>
 
