--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
  <head>  
       <meta charset="utf-8">  
       <title>Вход на сайт</title>
-       <link rel="stylesheet"  th:href="@{/css/main.css}"/>
+       <link rel="stylesheet"  th:href="@{/css/login.css}"/>
  </head>  
  <body>  
     <div class="auth">
@@ -18,7 +18,8 @@
             <input type="password" id="password" name="password" placeholder="Пароль" required>
           </div>
 
-          <button  type="submit">Войти</button>
+          <button  type="submit">Войти</button> <br>
+          <a href="/auth/registration"> Регистация </a>
         </form>
     </div>
  </body>  
