--- a/src/main/resources/templates/result-questionnaire-for-user.html
+++ b/src/main/resources/templates/result-questionnaire-for-user.html
@@ -3,10 +3,11 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Delivery food</title>
+    <title>Мини анкетная ситема</title>
     <link rel="stylesheet"  href="/css/main.css"/>
 </head>
 <body>
+<div th:insert="~{fragments/header :: header}" ></div>
 <h1>Ответы пользователя: <span th:text="${user.name}"> </span></h1>
 <h2>Анкета <span th:text="${questionnaire.name}"> </span></h2>
 
@@ -24,7 +25,7 @@
     </tr>
     </tbody>
 </table>
-
+<button type="button" onclick="window.location.href='/all-results'"> Назад </button>
 
 </body>
 </html>
